--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>Heheh</title>
-</head>
-<body>
-	<h1>Bones</h1>
-	<p>Holas!</p>
-</body>
-</html>
+---
+layout: default
+---
+
+<div class="acerca">
+  <h2 class="indigo-text titulo"><i class="mdi-hardware-keyboard-alt"></i>Acerca</h2>
+					<hr>
+					<p>¡Bienvenidos! Me llamo <strong>David Solà </strong>y esta es mi web personal. 
+					<br/><br/>
+					Tengo <code class="green-text">`echo $(( `date +%Y` - 1992))`</code> años y soy de <strong>Barcelona</strong>. Actualmente acabo de finalizar el Proyecto Fin de Grado del grado en <strong>Ingeniería Informática</strong> en la UPC. 
+					<br/><br/>
+					Me apasiona el mundo de la  <strong>informàtica</strong> y al mismo tiempo el  <strong>deporte</strong>, actualmente practico ciclismo (sí, soy de esas pocas personas que lo ven en la televisión) y también voy al gimnasio como complemento.
+					<br/><br/>
+					Aquí iré poniendo todo aquello que me parezca interesante contar y cosas que no sepa dónde guardar.
+					</p>
+					<h3 class="indigo-text titulo">¿Por qué la informática?</h3>
+					<hr>
+					<p>Una de las primeras cosas que he tenido claras desde que era muy pequeño, es que queriar crear cosas con la finalidad de ayudar a la gente. Con el paso de los años, vi que para cumplir este objetivo, tenia que decantarme hacia la ingeniería. 
+					<br/><br/>
+					Inicialmente, me interesé por la arquitectura y la ingeniería industrial pero fué con la informática donde realmente ví que me ofrecía la posibilidad de crear sistemas sin la limitación de materiales, físicas o cualquier tipo de leyes que gobiernan en el diseño de las cosas.</p>
+					<br/><br/>
+</div>
