--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 					<br/><br/>
 					Tengo <code class="green-text">`echo $(( `date +%Y` - 1992))`</code> años y soy de <strong>Barcelona</strong>. Actualmente acabo de finalizar el Proyecto Fin de Grado del grado en <strong>Ingeniería Informática</strong> en la UPC. 
 					<br/><br/>
-					Me apasiona el mundo de la  <strong>informàtica</strong> y al mismo tiempo el  <strong>deporte</strong>, actualmente practico ciclismo (sí, soy de esas pocas personas que lo ven en la televisión) y también voy al gimnasio como complemento.
+					Me apasiona el mundo de la  <strong>informática</strong> y al mismo tiempo el  <strong>deporte</strong>, actualmente practico ciclismo (sí, soy de esas pocas personas que lo ven en la televisión) y también voy al gimnasio como complemento.
 					<br/><br/>
 					Aquí iré poniendo todo aquello que me parezca interesante contar y cosas que no sepa dónde guardar.
 					</p>
